{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 9,
  "lineage": "90fc9c15-3653-0340-2a41-f48bfcfb1b5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "netflix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa3fe0fa7920f68e",
            "arn": "arn:aws:ec2:us-east-1:561848282182:instance/i-035da0e9614cb1327",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035da0e9614cb1327",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "MyKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a2f87422933064f3"
              }
            ],
            "primary_network_interface_id": "eni-0a2f87422933064f3",
            "private_dns": "ip-172-20-10-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.45",
            "public_dns": "ec2-13-221-202-10.compute-1.amazonaws.com",
            "public_ip": "13.221.202.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7dc2e0f31b69080",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b644a3983918da0f",
            "tags": {
              "Name": "Netflix-Server"
            },
            "tags_all": {
              "Name": "Netflix-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b2f53ffdcf299e2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "561848282182",
            "id": "i-035da0e9614cb1327",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.netflix_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561848282182:internet-gateway/igw-0892044d726f6e1b0",
            "id": "igw-0892044d726f6e1b0",
            "owner_id": "561848282182",
            "region": "us-east-1",
            "tags": {
              "Name": "netflix-igw"
            },
            "tags_all": {
              "Name": "netflix-igw"
            },
            "vpc_id": "vpc-0eb5916389eddea23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561848282182:route-table/rtb-0eaed9321ca68f8fe",
            "id": "rtb-0eaed9321ca68f8fe",
            "owner_id": "561848282182",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0892044d726f6e1b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb5916389eddea23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "561848282182",
            "id": "rtb-0eaed9321ca68f8fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f45a95154b8e2204",
            "region": "us-east-1",
            "route_table_id": "rtb-0eaed9321ca68f8fe",
            "subnet_id": "subnet-0b644a3983918da0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netflix_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561848282182:security-group/sg-06b2f53ffdcf299e2",
            "description": "SG for Netflix Tools Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b2f53ffdcf299e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "netflix-sg",
            "name_prefix": "",
            "owner_id": "561848282182",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "netflix-sg"
            },
            "tags_all": {
              "Name": "netflix-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb5916389eddea23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "561848282182",
            "id": "sg-06b2f53ffdcf299e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561848282182:subnet/subnet-0b644a3983918da0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b644a3983918da0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561848282182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0eb5916389eddea23"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "561848282182",
            "id": "subnet-0b644a3983918da0f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netflix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561848282182:vpc/vpc-0eb5916389eddea23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0bed6360b0c270974",
            "default_route_table_id": "rtb-0d14464b74b0a9bc8",
            "default_security_group_id": "sg-051d7778067e5605b",
            "dhcp_options_id": "dopt-07f59958a0e06d192",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb5916389eddea23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d14464b74b0a9bc8",
            "owner_id": "561848282182",
            "region": "us-east-1",
            "tags": {
              "Name": "netflix"
            },
            "tags_all": {
              "Name": "netflix"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "561848282182",
            "id": "vpc-0eb5916389eddea23",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}